--- a/HotelManagement/Areas/Admin/Views/Guest/Edit.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Guest/Edit.cshtml
@@ -21,7 +21,8 @@
             @Html.LabelFor(model => model.CCCD, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.CCCD, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CCCD, "", new { @class = "text-danger" })
+                @*@Html.ValidationMessageFor(model => model.CCCD, "", new { @class = "text-danger" })*@
+                @Html.ValidationMessage("CCCD", new { @class = "text-danger" })
             </div>
         </div>
 
