--- a/HotelManagement/Areas/Admin/Views/RoomType/Delete.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RoomType/Delete.cshtml
@@ -30,6 +30,14 @@
         </tr>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.SoNguoiToiDa)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.SoNguoiToiDa)
+            </td>
+        </tr>
+        <tr>
+            <th>
                 @Html.DisplayNameFor(model => model.HinhAnh)
             </th>
             <td>
