--- a/HotelManagement/Views/Account/Login.cshtml
+++ b/HotelManagement/Views/Account/Login.cshtml
@@ -1,5 +1,57 @@
-﻿@using HotelManagement.Models
-@model LoginViewModel
+﻿@*@using HotelManagement.Models
+    @model LoginViewModel
+    @{
+        ViewBag.Title = "Log in";
+        Layout = "~/Views/Shared/_AccountLayout.cshtml";
+    }
+
+    <span class="login100-form-title p-b-49">
+        @ViewBag.Title
+    </span>
+
+    <div class="wrap-input100 validate-input m-b-23" data-validate="Username is reauired">
+        <span class="label-input100">Email</span>
+        @Html.TextBoxFor(m => m.Email, new { @class = "input100", placeholder = "Type your email" })
+        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+        <i class="fa-solid fa-user input-icon"></i>
+    </div>
+
+    <div class="wrap-input100 validate-input" data-validate="Password is required">
+        <span class="label-input100">Password</span>
+        @Html.PasswordFor(m => m.Password, new { @class = "input100", placeholder = "Type your password" })
+        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+        <i class="fa-solid fa-lock input-icon"></i>
+    </div>
+
+    <div class="text-right p-t-8 p-b-31">
+        @Html.ActionLink("Forgot password", "ForgotPassword")
+    </div>
+
+    <div class="pt-4 text-center">
+        <p class="text-danger">
+            @TempData["error"]
+        </p>
+    </div>
+
+    <div class="container-login100-form-btn">
+        <div class="wrap-login100-form-btn">
+            <div class="login100-form-bgbtn"></div>
+            <button class="login100-form-btn" type="submit">
+                Login
+            </button>
+        </div>
+    </div>
+
+    <div class="flex-col-c p-t-155">
+        <span class="txt1 p-b-17">
+            Or Sign Up Using
+        </span>
+
+        @Html.ActionLink("Signup", "Register")
+    </div>*@
+
+@using HotelManagement.Models
+@model TaiKhoanKH
 @{
     ViewBag.Title = "Log in";
     Layout = "~/Views/Shared/_AccountLayout.cshtml";
@@ -8,44 +60,51 @@
 <span class="login100-form-title p-b-49">
     @ViewBag.Title
 </span>
+<div class="row">
+    <div class="col-md-8">
+        <section id="loginForm">
+            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { role = "form" }))
+            {
+                @Html.AntiForgeryToken()
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="wrap-input100 validate-input m-b-23" data-validate="Username is reauired">
+                    <span class="label-input100">Email</span>
+                    @Html.TextBoxFor(m => m.TenTaiKhoan, new { @class = "input100", placeholder = "Type your email" })
+                    @Html.ValidationMessageFor(m => m.TenTaiKhoan, "", new { @class = "text-danger" })
+                    <i class="fa-solid fa-user input-icon"></i>
+                </div>
 
-<div class="wrap-input100 validate-input m-b-23" data-validate="Username is reauired">
-    <span class="label-input100">Email</span>
-    @Html.TextBoxFor(m => m.Email, new { @class = "input100", placeholder = "Type your email" })
-    @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-    <i class="fa-solid fa-user input-icon"></i>
-</div>
+                <div class="wrap-input100 validate-input" data-validate="Password is required">
+                    <span class="label-input100">Password</span>
+                    @Html.PasswordFor(m => m.MatKhau, new { @class = "input100", placeholder = "Type your password" })
+                    @Html.ValidationMessageFor(m => m.MatKhau, "", new { @class = "text-danger" })
+                    <i class="fa-solid fa-lock input-icon"></i>
+                </div>
 
-<div class="wrap-input100 validate-input" data-validate="Password is required">
-    <span class="label-input100">Password</span>
-    @Html.PasswordFor(m => m.Password, new { @class = "input100", placeholder = "Type your password" })
-    @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-    <i class="fa-solid fa-lock input-icon"></i>
-</div>
+                <div class="text-right p-t-8 p-b-31">
+                    @Html.ActionLink("Forgot password", "ForgotPassword")
+                </div>
+                <div class="container-login100-form-btn">
+                    <div class="wrap-login100-form-btn">
+                        <div class="login100-form-bgbtn"></div>
+                        <button class="login100-form-btn" type="submit">
+                            Login
+                        </button>
+                    </div>
+                </div>
 
-<div class="text-right p-t-8 p-b-31">
-    @Html.ActionLink("Forgot password", "ForgotPassword")
-</div>
+                <div class="flex-col-c p-t-155">
+                    <span class="txt1 p-b-17">
+                        Or Sign Up Using
+                    </span>
 
-<div class="pt-4 text-center">
-    <p class="text-danger">
-        @TempData["error"]
-    </p>
-</div>
-
-<div class="container-login100-form-btn">
-    <div class="wrap-login100-form-btn">
-        <div class="login100-form-bgbtn"></div>
-        <button class="login100-form-btn" type="submit">
-            Login
-        </button>
+                    @Html.ActionLink("Signup", "Register")
+                </div>
+                @* Enable this once you have account confirmation enabled for password reset functionality
+                    <p>
+                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
+                    </p>*@
+            }
+        </section>
     </div>
-</div>
-
-<div class="flex-col-c p-t-155">
-    <span class="txt1 p-b-17">
-        Or Sign Up Using
-    </span>
-
-    @Html.ActionLink("Signup", "Register")
 </div>
