--- a/HotelManagement/Views/Shared/_LoginPartial.cshtml
+++ b/HotelManagement/Views/Shared/_LoginPartial.cshtml
@@ -1,17 +1,15 @@
 ﻿@using Microsoft.AspNet.Identity
-@if (Request.IsAuthenticated)
+@{ var user = Session["User"] as HotelManagement.TaiKhoanKH;}
+@if (user != null)
 {
-    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
-    {
-        @Html.AntiForgeryToken()
-
-        <ul class="navbar-nav navbar-right">
-            <li>
-                @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", @class = "nav-link" })
-            </li>
-            <li><a class="nav-link" href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
-        </ul>
-    }
+    <ul class="navbar-nav navbar-right col-3 col-lg-3 site-account">
+        <li>
+            <a class="nav-link">
+                @user.KhachHang.TenKhachHang
+            </a>
+        </li>
+        <li>@Html.ActionLink("Log Out", "LogOff", "Account")</li>
+    </ul>
 }
 else
 {
