--- a/HotelManagement/Areas/Admin/Views/Guest/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Guest/Index.cshtml
@@ -27,7 +27,7 @@
 } -->
 
 <p class="ml-32 mt-32 mb-24">
-    @Html.ActionLink("Add New Guest", "Create", "Guest", null, new { @class = "create-btn" })
+    @Html.ActionLink("Add New", "Create", "Guest", null, new { @class = "create-btn" })
 </p>
 <div class="table-section">
     <table class="table">
