--- a/HotelManagement/Areas/Admin/Views/Room/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Room/Index.cshtml
@@ -22,7 +22,7 @@
 
 
 <p class="ml-32 mt-32 mb-24">
-    @Html.ActionLink("Add New Room", "Create", "Room", null, new { @class = "create-btn" })
+    @Html.ActionLink("Add New", "Create", "Room", null, new { @class = "create-btn" })
 </p>
 <div class="row family-room-list">
     @foreach (var item in Model)
