--- a/HotelManagement/Areas/Admin/Views/RoomType/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RoomType/Index.cshtml
@@ -21,7 +21,7 @@
 }
 
 <p class="ml-32 mt-32 mb-24">
-    @Html.ActionLink("Add New Room Type", "Create", "RoomType", null, new { @class = "create-btn" })
+    @Html.ActionLink("Add New", "Create", "RoomType", null, new { @class = "create-btn" })
 </p>
 
 <div class="table-section">
