--- a/HotelManagement/Areas/Admin/Views/Staff/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Staff/Index.cshtml
@@ -23,7 +23,7 @@
 
 
 <p class="ml-32 mt-32 mb-24">
-    @Html.ActionLink("Create New", "Create", "Staff", null, new { @class = "create-btn" })
+    @Html.ActionLink("Add New", "Create", "Staff", null, new { @class = "create-btn" })
 </p>
 <div class="table-section">
     <table class="table">
