--- a/HotelManagement/Areas/Admin/Views/Service/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Service/Index.cshtml
@@ -20,7 +20,7 @@
 }
 
 <p class="ml-32 mt-32 mb-24">
-    @Html.ActionLink("Create New", "Create", "Service", null, new { @class = "create-btn" })
+    @Html.ActionLink("Add New", "Create", "Service", null, new { @class = "create-btn" })
 </p>
 <div class="table-section">
     <table class="table">
