--- a/HotelManagement/Assets/admin/css/Style.css
+++ b/HotelManagement/Assets/admin/css/Style.css
@@ -1,4 +1,8 @@
-﻿td:last-child {
+﻿li {
+    list-style-type: none;
+}
+
+td:last-child {
     display: flex;
     justify-content: center;
 }
@@ -152,6 +156,61 @@ td a {
         opacity: .8;
     }
 
+.button-list li {
+    position: relative;
+}
+
+.filter-buttons {
+    position: absolute;
+    top: 32px;
+    flex-direction: column;
+    width: 200px;
+    box-shadow: 0 0 50px #ccc;
+    border-radius: 8px;
+    padding: 0;
+    display: none;
+    overflow: hidden;
+}
+
+    .filter-buttons li {
+    }
+
+    .filter-buttons a {
+        width: 100%;
+    }
+
+        .filter-buttons a:hover {
+            color: #fff;
+            background-color: #4e73df;
+        }
+
+    .filter-buttons a {
+        border-radius: 0;
+        background-color: #fff;
+        color: #4e73df;
+        border: none;
+    }
+
+.create-btn-outline {
+    padding: 8px 16px;
+    color: #4e73df;
+    border: 1px solid #4e73df;
+    background-color: #fff;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+.filter-list:hover {
+    color: #fff;
+    background-color: #4e73df;
+    text-decoration: none;
+    z-index: 2;
+}
+
+.button-list li:hover .filter-buttons {
+    display: flex;
+}
+
 .navbar {
     position: fixed;
     top: 0;
@@ -222,6 +281,10 @@ td a {
 
 .search-form {
     animation: moveLeft ease .25s;
+}
+
+.button-list>ul{
+    padding: 0;
 }
 
 .btn-primary {
