--- a/HotelManagement/Views/Booking/BookingRoom.cshtml
+++ b/HotelManagement/Views/Booking/BookingRoom.cshtml
@@ -24,6 +24,7 @@
 
     <!-- Custom stlylesheet -->
     <link type="text/css" rel="stylesheet" href="~/Content/Reservation.css" />
+    <link type="text/css" rel="stylesheet" href="~/Content/Loader.css" />
     <link rel="stylesheet" href="~/Content/StyleCustom.css" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -148,7 +149,8 @@
             </div>
         </div>
     </div>
-    @*<script src="~/Scripts/main.js"></script>*@
+    <div class="loader"></div>
+    <script src="~/Scripts/Loader.js"></script>
     <script src="~/Scripts/Validate.js"></script>
     <script src="~/Scripts/jquery-3.4.1.js"></script>
     <script>
@@ -287,24 +289,24 @@
                 totalPrice += parseInt(room.price * room.quantity * distance);
                 var roomInfoDiv = document.createElement('div');
                 roomInfoDiv.innerHTML = `
-                                    <div class="row selected-infor">
-                                        <div class="col-md-6">
-                                            <p>Room type: <span id="type" style="font-weight: 700">${room.type}</span></p>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <p>Room Quantity: <span id="quantity" style="font-weight: 700">${room.quantity}</span></p>
-                                        </div>
-                                        <p>Room detail: <span id="detail" style="font-weight: 100">${room.bedInfo}, Wifi</span></p>
+                                        <div class="row selected-infor">
+                                            <div class="col-md-6">
+                                                <p>Room type: <span id="type" style="font-weight: 700">${room.type}</span></p>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <p>Room Quantity: <span id="quantity" style="font-weight: 700">${room.quantity}</span></p>
+                                            </div>
+                                            <p>Room detail: <span id="detail" style="font-weight: 100">${room.bedInfo}, Wifi</span></p>
 
-                                    </div>
-                                    <div class="row selected-infor">
-                                        <div class="col-md-12">
-                                            <p>Price: <span id="price" style="font-weight: 700">${VND.format(parseInt(room.price * room.quantity * distance))}</span></p>
                                         </div>
-                                    </div>
-                                    <div class="row selected-infor guest-number">
-                                    </div>
-                                `;
+                                        <div class="row selected-infor">
+                                            <div class="col-md-12">
+                                                <p>Price: <span id="price" style="font-weight: 700">${VND.format(parseInt(room.price * room.quantity * distance))}</span></p>
+                                            </div>
+                                        </div>
+                                        <div class="row selected-infor guest-number">
+                                        </div>
+                                    `;
                 const guestNumber = roomInfoDiv.querySelector(".guest-number");
                 for (var i = 0; i < room.quantity; i++) {
                     var roomType = room.type;
@@ -312,29 +314,29 @@
                         roomType = "FamilySuite";
                     }
                     guestNumber.innerHTML += `
-                                    <div class="col-md-2">
-                                        <div class="form-group">
-                                            <p>Room ${i + 1}</p>
-                                            <select id="room-${roomIndex}" class="rooms-list form-control">
-                                                <option>1</option>
-                                                <option>2</option>
-                                                <option>3</option>
-                                            </select>
-                                            <span class="select-arrow"></span>
+                                        <div class="col-md-2">
+                                            <div class="form-group">
+                                                <p>Room ${i + 1}</p>
+                                                <select id="room-${roomIndex}" class="rooms-list form-control">
+                                                    <option>1</option>
+                                                    <option>2</option>
+                                                    <option>3</option>
+                                                </select>
+                                                <span class="select-arrow"></span>
+                                            </div>
                                         </div>
-                                    </div>
-                                `
+                                    `
                     roomIndex++;
                 }
                 roomInfoDiv.innerHTML += `
-                                    <hr/>
-                                `
+                                        <hr/>
+                                    `
 
                 displayContainer.appendChild(roomInfoDiv);
             });
             displayContainer.innerHTML += `
-                                    <p style="font-weight: 700; margin: 32px 0 24px;">Total price: ${VND.format(totalPrice)}</p>
-                                `
+                                        <p style="font-weight: 700; margin: 32px 0 24px;">Total price: ${VND.format(totalPrice)}</p>
+                                    `
 
             const checkin = localStorage.getItem('checkin');
             const checkout = localStorage.getItem('checkout');
