--- a/HotelManagement/Areas/Admin/Views/Room/Create.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Room/Create.cshtml
@@ -19,7 +19,8 @@
             @Html.LabelFor(model => model.MaPhong, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.MaPhong, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.MaPhong, "", new { @class = "text-danger" })
+                @*@Html.ValidationMessageFor(model => model.MaPhong, "", new { @class = "text-danger" })*@
+                @Html.ValidationMessage("roomCode", new { @class = "text-danger" })
             </div>
         </div>
 
