--- a/HotelManagement/Areas/Admin/Views/Service/Edit.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Service/Edit.cshtml
@@ -21,7 +21,8 @@
             @Html.LabelFor(model => model.TenDichVu, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.TenDichVu, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TenDichVu, "", new { @class = "text-danger" })
+                @*@Html.ValidationMessageFor(model => model.TenDichVu, "", new { @class = "text-danger" })*@
+                @Html.ValidationMessage("TenDichVu", new { @class = "text-danger" })
             </div>
         </div>
 
