add guest info view

--- a/HotelManagement/Content/Account.css
+++ b/HotelManagement/Content/Account.css
@@ -1,4 +1,6 @@
 ﻿.login100-form-title {
+    font-weight: 700;
+    letter-spacing: 2px;
     font-family: 'IBM Plex Sans', sans-serif;
     font-family: 'Roboto', sans-serif;
 }
