--- a/HotelManagement/Views/Shared/_AccountLayout.cshtml
+++ b/HotelManagement/Views/Shared/_AccountLayout.cshtml
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" type="text/css" href="~/Assets/registration/css/style.css">
     <link rel="stylesheet" type="text/css" href="~/Assets/registration/css/util.css">
+    <link rel="stylesheet" type="text/css" href="~/Content/Loader.css">
     <link rel="stylesheet" type="text/css" href="~/Content/Account.css">
 
 </head>
@@ -32,11 +33,12 @@
 
     <div id="dropDownSelect1"></div>
 
-    <script src="~/Assets/registration/js/script.js"></script>
+    <div class="loader"></div>
+    <script src="~/Scripts/Loader.js"></script>
 
 </body>
 </html>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+@*@section Scripts {
+    @Scripts.Render("~/Scripts/Loader.js")
+}*@
